# life-planner-service/src/main/java/com/dhabits/code/lifeplanner/lifeplanner/db/model/MainDirection.java
@@ -1,6 +1,13 @@
 package com.dhabits.code.lifeplanner.lifeplanner.db.model;
 
-import jakarta.persistence.*;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -20,9 +27,12 @@ public class MainDirection {
     @GeneratedValue(generator = "UUID")
     private UUID id;
 
+    @Column(name = "idf")
+    private Integer idf;
+
     @Column(name = "name")
     private String name;
 
-    @OneToMany(fetch = FetchType.EAGER, mappedBy = "mainDirection")
+    @OneToMany(fetch = FetchType.EAGER, cascade = CascadeType.ALL, mappedBy = "mainDirection")
     private Set<Subdirection> subdirections;
 }
